[package]
authors = ["Matteo Campanelli <matteo.campanelli@gmail.com>", "Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
edition = "2018"
name = "veksel"
version = "0.1.0"

[dependencies]
bulletproofs = {git = "https://github.com/matteocam/bulletproofs", branch = "develop", features = ["yoloproofs"]}# R1CS interface
cpsnarks-set = {git = "https://github.com/matteocam/cpsnarks-set", default-features = false, features = [ "dalek" ] }
accumulator = { git = "https://github.com/matteocam/cpsnarks-set-accumulator" }

curve25519-dalek = "3.0.0"
rug = "=1.7.0"
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve" ] }
gridiron = "0.8"
merlin = "2.0.0"
num-traits = "0.2.14"
rand = "0.7.3"
rand_core = {version = "0.5.1", features = ["getrandom"]}

[dev-dependencies]
proptest = "0.10.1"
